# frontend-delez

./: .dockerignore  .env.production.example  .gitattributes  .gitignore  .gitlab-ci.yml  03_Инструкция_запуска.md  CLAUDE.md  Dockerfile  README.md  api.json  auth.test.ts  auth.ts  create-coverage.js  docker-compose.staging.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  sonar-project.properties  turbo.json  vitest.config.ts
.github/workflows/: build-macos.yml  ci.yml  ios.yml
Project_files/Documentation_frontend/: What-are-we-going-for.md  architecture.md  commit-rules.md
Project_files/tasks-frontend/: Chat-page.md  podpravit.md  sbros-parolya-podtverzhdenie-akkaunta.md  stilizovat.md
apps/web/: .dockerignore  .env.example  .stylelintrc.json  Delez.7z  Dockerfile  Makefile  api.json  backup.sh  build-appimage.sh  cors-check.sh  deps-check.sh  eslint.config.js  index.html  install-debug.sh  install-release.sh  install.sh  logs-security.sh  package.json  (+10 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src-tauri/whisper-runtime/: setup-model.sh
docs/: API_TEST_REPORT.md  BACKUP_RESTORE_REPORT.md  CHANGELOG.md  DEFECT_LOG.md  DEMO_GUIDE.md  DEPLOYMENT.md  PERFORMANCE_REPORT.md  RECOMMENDATIONS.md  RELEASE_NOTES.md  RISK_REGISTER.md  SECURITY_CHECKLIST.md  TEST_PLAN.md  demo_accounts.txt  demo_readme.txt  full_check_report.txt  git_security_status.txt  public_url.txt  repo_link.txt
lib/: logger.ts
(+566 files in other folders)
